<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_round_sector"
        android:title="@string/menu_item_add_config"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/import_qrcode"
                android:title="@string/menu_item_import_config_qrcode"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_clipboard"
                android:title="@string/menu_item_import_config_clipboard"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_vmess"
                android:title="@string/menu_item_import_config_manually_vmess"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_ss"
                android:title="@string/menu_item_import_config_manually_ss"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_socks"
                android:title="@string/menu_item_import_config_manually_socks"
                app:showAsAction="never" />

            <item
                android:title="@string/menu_item_import_config_custom"
                app:showAsAction="always">
                <menu>
                    <item
                        android:id="@+id/import_config_custom_clipboard"
                        android:title="@string/menu_item_import_config_custom_clipboard"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_local"
                        android:title="@string/menu_item_import_config_custom_local"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_url"
                        android:title="@string/menu_item_import_config_custom_url"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_url_scan"
                        android:title="@string/menu_item_import_config_custom_url_scan"
                        app:showAsAction="never" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/export_all"
        android:title="@string/title_export_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/ping_all"
        android:title="@string/title_ping_all_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_update"
        android:title="@string/title_sub_update"
        app:showAsAction="never" />
</menu>