<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="namelessnet.org.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="namelessnet.org.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="namelessnet.org.ui.logs.LogsFragment"
        android:label="@string/title_logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/navigation_sector"
        android:name="namelessnet.org.ui.sector.SectorFragment"
        android:label="sector"
        tools:layout="@layout/sector_fragment" />

    <fragment
        android:id="@+id/navigation_settin"
        android:name="namelessnet.org.ui.settin.SettinFragment"
        android:label="@string/title_settin"
        tools:layout="@layout/settin_fragment" />
</navigation>