<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.stats.StatsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textview.MaterialTextView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uplink" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/uplinkBytesView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/_0kib" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/upLinkChart"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/downlink" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/downlinkBytesView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:text="@string/_0kib" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/downLinkChart"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>